src/scss/layout/_header.scss
.header {
    background-color: $green;

    .header-content {
        padding: $separation / 2 0;

        @include tablet {
            display: flex;
            justify-content: space-between;
            align-items: center;
        }
    }

    h1 {
        color: $white;
        margin-bottom: 1rem;
        text-align: center;

        @include tablet {
            margin-bottom: 0;
        }
    }
}

.nav-principal {
    display: flex;
    gap: 2rem;
    justify-content: center;

    a {
        color: $white;
        font-size: 2rem;

        &:hover {
            color: $yellow;
        }
    }
}

